# jojo-otp-app

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  client_step.rs  main.rs  modal_otp.rs  otp_step.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  main.rs  otp.rs
