[package]
name = "jojo-otp-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1.0.72"
jojo-common = { path = "../../jojo-common" }
log = "0.4.19"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace" }
jojo-wifi-manager = { path = "../../jojo-wifi-manager" }
dotenv = "0.15.0"
load-dotenv = "0.1.2"
http = "0.2.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
